node sphere creation , sphere tree node get and a mock download link
