# openapi/openapi.json
@@ -304,7 +304,66 @@
         "tags" : [ "Greeting Resource" ]
       }
     },
-    "/node/download/{id}" : {
+    "/node" : {
+      "post" : {
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : { }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Not Authorized"
+          },
+          "403" : {
+            "description" : "Not Allowed"
+          }
+        },
+        "summary" : "Create Node",
+        "tags" : [ "Node Resource" ],
+        "security" : [ {
+          "SecurityScheme" : [ ]
+        } ]
+      }
+    },
+    "/node/{id}" : {
+      "get" : {
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "integer",
+            "format" : "int64"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : { }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Not Authorized"
+          },
+          "403" : {
+            "description" : "Not Allowed"
+          }
+        },
+        "summary" : "Get Node Data",
+        "tags" : [ "Node Resource" ],
+        "security" : [ {
+          "SecurityScheme" : [ ]
+        } ]
+      }
+    },
+    "/node/{id}/downloadUrl" : {
       "get" : {
         "parameters" : [ {
           "name" : "id",
@@ -401,10 +460,10 @@
         } ]
       }
     },
-    "/sphere/{id}/node-tree" : {
+    "/sphere/{sphereId}/node-tree" : {
       "get" : {
         "parameters" : [ {
-          "name" : "id",
+          "name" : "sphereId",
           "in" : "path",
           "required" : true,
           "schema" : {
